Added missing translations

--- a/src/ui/generator/index.html
+++ b/src/ui/generator/index.html
@@ -97,6 +97,7 @@
                                 <select class="browser-default" name="template" id="selTemplate">
                                     <option value="" disabled data-i18n='Choose your template'></option>
                                     <option value="phpSilex" selected data-i18n='PHP + Silex Application'></option>
+                                    <option value="jsExpress" selected data-i18n='JavaScript + ExpressJS Application'></option>
                                 </select>
                             </div>
                         </div>
